@@ -4,6 +4,8 @@ PHP                                                                        NEWS
 - Fixed a possible open_basedir/safe_mode bypass in session extension
   identified by Grzegorz Stachowiak. (Ilia)
 
+- Fixed bug #50847 (strip_tags() removes all tags greater then 1023 bytes
+  long). (Ilia)
 - Fixed bug #50727 (Accesing mysqli->affected_rows on no connection causes
   segfault). (Andrey, Johannes)
 
